modify author name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a>Yifeng Xiong<sup>1</sup></a>  &nbsp;  &nbsp;  &nbsp;  &nbsp;
             <a>Chenyu You<sup>2</sup></a>  &nbsp;  &nbsp;  &nbsp;  &nbsp;
             <a>Pooya Khosravi<sup>1</sup></a>  &nbsp;  &nbsp;  &nbsp;  &nbsp;
-            <a>shanlin sun<sup>1</sup></a>  &nbsp;  &nbsp;  &nbsp;  &nbsp;
+            <a>Shanlin sun<sup>1</sup></a>  &nbsp;  &nbsp;  &nbsp;  &nbsp;
             <a>Xiangyi Yan<sup>1</sup></a>  &nbsp;  &nbsp;  &nbsp;  &nbsp;
             <a>James Duncan<sup>2</sup></a>  &nbsp;  &nbsp;  &nbsp;  &nbsp;
             <a>Xiaohui Xie<sup>1</sup></a> 
