--- a/index.html
+++ b/index.html
@@ -199,21 +199,21 @@
 
 <!-- </p></div></div><br> -->
 
-<!-- <div class="container" id="BibTeX">
+<div class="container" id="BibTeX">
   <h2 style="font-size: 26px">Citation</h2>
-  <p>If you found OneFormer useful in your research, please consider starring ⭐ us on GitHub and citing 📚 us in your research!</p>
+  <p>If you found MedGenD useful in your research, please consider citing us in your research!</p>
   <div style="font-weight:normal; background-color:  #F0F0F0;">
     <tt>
-    @inproceedings{jain2022oneformer, <br>
+    @article{han2023medgen3d, <br>
       <div style="margin-left: 5%; font-weight:normal; ">
-      title={{OneFormer: One Transformer to Rule Universal Image Segmentation}}, <br>
-      author={Jitesh Jain and Jiachen Li and MangTik Chiu and Ali Hassani and Nikita Orlov and Humphrey Shi}, <br>
-      journal={CVPR}, <br>
+      title={MedGen3D: A Deep Generative Framework for Paired 3D Image and Mask Generation}, <br>
+      author={Kun Han and Yifeng Xiong and Chenyu You and Pooya Khosravi and Shanlin Sun and Xiangyi Yan and James Duncan and Xiaohui Xie}, <br>
+      journal={arXiv preprint arXiv: Arxiv-2304.04106}, <br>
       year={2023} <br>
     </div>
     &nbsp;&nbsp;&nbsp;}</tt>
   </div>
-</div> -->
+</div>
 
 </p></div></div><br>
   
